Fixed bug: 2839425 - Time->Attendance ->sub menu is not aligned. Fixed by Poojitha Jayasinghe.

--- a/php/orangehrm/themes/orange/menu/menu.css
+++ b/php/orangehrm/themes/orange/menu/menu.css
@@ -261,7 +261,7 @@
 }
 
 #nav li#time ul li.l2 span {
-	width: 9em;
+	width: 11em;
 }
 
 #nav li#time ul li.l3 a.timesheets span {
